Fixed spacing issue with twitter feed on mobile devices

--- a/stylesheets/default.scss
+++ b/stylesheets/default.scss
@@ -70,8 +70,6 @@ body {
   }
 
   nav {
-    margin-bottom: 46px;
-
     ul {
       margin: 0;
       padding: 0;
@@ -158,11 +156,15 @@ body {
   }
 
   .tweets {
-    margin: 0 auto;
+    margin: 46px auto 0 auto;
     width: 250px;
 
+    @media (max-width: 1199px) {
+      display: none; /* there is no space for the twitter feed in the layout for mobile devices */
+    }
+
     a.twitter-timeline {
-      display: none;
+      display: none; /* placeholder element, is replaced by an iframe by twitter */
     }
   }
 }
